--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -25,120 +25,134 @@
         app:layout_constraintVertical_bias="0.043"
         tools:ignore="HardcodedText" />
 
+
     <EditText
-        android:id="@+id/editTextText"
-        android:layout_width="138dp"
-        android:layout_height="48dp"
+        android:id="@+id/username"
+        android:layout_width="381dp"
+        android:layout_height="65dp"
         android:layout_marginEnd="16dp"
+        android:autofillHints=""
         android:ems="10"
         android:inputType="text"
         android:text="Username"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
-        app:layout_constraintEnd_toStartOf="@+id/editTextTextEmailAddress3"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintBottom_toTopOf="@+id/editPassword"
+        app:layout_constraintEnd_toStartOf="@+id/editEmailAddress"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_Home"
-        app:layout_constraintVertical_bias="0.482"
-        android:autofillHints=""
+        app:layout_constraintVertical_bias="0.14"
         tools:ignore="HardcodedText" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress3"
-        android:layout_width="183dp"
-        android:layout_height="47dp"
-        android:layout_marginEnd="24dp"
+        android:id="@+id/editEmailAddress"
+        android:layout_width="367dp"
+        android:layout_height="62dp"
+        android:layout_marginEnd="28dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
+        app:layout_constraintBottom_toTopOf="@+id/editPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_Home"
-        app:layout_constraintVertical_bias="0.463"
-        tools:ignore="HardcodedText" />
+        app:layout_constraintVertical_bias="0.771"
+        tools:ignore="HardcodedText"
+        android:autofillHints="" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/personalInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="56dp"
         android:text="Personal Information"
+        android:textColor="#070101"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.575"
+        app:layout_constraintHorizontal_bias="0.577"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
+        app:layout_constraintTop_toBottomOf="@+id/editPassword"
         tools:ignore="HardcodedText" />
 
     <EditText
-        android:id="@+id/editTextTextPostalAddress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/editCountry"
+        android:layout_width="348dp"
+        android:layout_height="51dp"
+        android:autofillHints="United States"
         android:ems="10"
         android:inputType="textPostalAddress"
         android:text="Country"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.396"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextText2"
+        app:layout_constraintVertical_bias="0.812"
         tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="126dp"
+        android:layout_height="22dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginBottom="28dp"
+        android:fontFamily="sans-serif-black"
         android:text="Date of Birth"
+        android:textColor="#070101"
+        android:textSize="16sp"
         android:textStyle="bold"
+        android:typeface="serif"
         app:layout_constraintBottom_toTopOf="@+id/editTextDate"
-        app:layout_constraintEnd_toStartOf="@+id/textView9"
-        app:layout_constraintHorizontal_bias="0.378"
+        app:layout_constraintEnd_toStartOf="@+id/editTextText2"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_Home"
-        app:layout_constraintVertical_bias="0.933"
+        app:layout_constraintVertical_bias="1.0"
         tools:ignore="HardcodedText" />
 
 
     <EditText
         android:id="@+id/editTextDate"
-        android:layout_width="135dp"
-        android:layout_height="44dp"
+        android:layout_width="160dp"
+        android:layout_height="52dp"
         android:ems="10"
         android:hint="mm/dd/yyyy"
         android:inputType="date"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPostalAddress"
+        app:layout_constraintBottom_toTopOf="@+id/editCountry"
         app:layout_constraintEnd_toStartOf="@+id/editTextText2"
+        app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9"
-        app:layout_constraintVertical_bias="0.327"
-        tools:ignore="HardcodedText" />
-
+        app:layout_constraintVertical_bias="0.898"
+        tools:ignore="HardcodedText"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/editTextText2"
-        android:layout_width="168dp"
-        android:layout_height="42dp"
+        android:layout_width="185dp"
+        android:layout_height="49dp"
         android:ems="10"
         android:inputType="text"
         android:text="Female"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.839"
+        app:layout_constraintHorizontal_bias="0.938"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9"
-        app:layout_constraintVertical_bias="0.125"
-        tools:ignore="HardcodedText" />
-
+        app:layout_constraintVertical_bias="0.659"
+        tools:ignore="HardcodedText"
+        android:autofillHints="" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="100dp"
         android:text="Gender"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textView7"
+        app:layout_constraintStart_toEndOf="@+id/personalInfo"
         app:layout_constraintTop_toBottomOf="@+id/text_Home"
         app:layout_constraintVertical_bias="0.523"
         tools:ignore="HardcodedText" />
@@ -146,18 +160,17 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="282dp"
+        android:layout_height="61dp"
         android:text="Register"
         app:iconPadding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.531"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.765"
+        app:layout_constraintVertical_bias="0.852"
         tools:ignore="HardcodedText" />
-
 
     <CheckBox
         android:id="@+id/checkBox2"
@@ -166,25 +179,43 @@
         android:text="I agree to the terms of use and privacy"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.581"
+        app:layout_constraintHorizontal_bias="0.531"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.885"
+        app:layout_constraintVertical_bias="0.944"
         tools:ignore="HardcodedText" />
 
-
     <EditText
-        android:id="@+id/editTextTextPassword2"
-        android:layout_width="267dp"
-        android:layout_height="54dp"
+        android:id="@+id/editPassword"
+        android:layout_width="381dp"
+        android:layout_height="58dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/textView8"
-        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress3"
-        app:layout_constraintStart_toStartOf="@+id/editTextText"
+        app:layout_constraintEnd_toEndOf="@+id/editEmailAddress"
+        app:layout_constraintHorizontal_bias="0.555"
+        app:layout_constraintStart_toStartOf="@+id/editTextDate"
         app:layout_constraintTop_toBottomOf="@+id/text_Home"
-        tools:ignore="HardcodedText" />
+        app:layout_constraintVertical_bias="0.63"
+        tools:ignore="HardcodedText"
+        android:autofillHints="" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="88dp"
+        android:layout_height="27dp"
+        android:fontFamily="sans-serif-black"
+        android:text="TextView"
+        android:textColor="#070202"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:typeface="serif"
+        app:layout_constraintBottom_toTopOf="@+id/editTextText2"
+        app:layout_constraintEnd_toEndOf="@+id/editTextText2"
+        app:layout_constraintStart_toStartOf="@+id/editTextText2"
+        app:layout_constraintTop_toBottomOf="@+id/personalInfo"
+        tools:text="Gender" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
