--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,56 +10,60 @@
 
     <TextView
         android:id="@+id/text_Home"
-        android:layout_width="260dp"
-        android:layout_height="62dp"
+        android:layout_width="311dp"
+        android:layout_height="69dp"
         android:fontFamily="sans-serif-smallcaps"
         android:text=" What2Watch"
         android:textColor="#000000"
-        android:textSize="40sp"
+        android:textSize="50sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.071" />
+        app:layout_constraintVertical_bias="0.092" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="168dp"
-        android:layout_height="189dp"
-        android:layout_marginTop="4dp"
-        android:src="@drawable/filmreel"
-        app:layout_constraintEnd_toEndOf="@+id/text_Home"
-        app:layout_constraintStart_toStartOf="@+id/text_Home"
-        app:layout_constraintTop_toBottomOf="@+id/text_Home" />
-
-    <ImageView
-        android:id="@+id/btn_start"
-        android:layout_width="157dp"
-        android:layout_height="82dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/start"
-        android:text="@string/start"
-        app:layout_constraintEnd_toEndOf="@+id/text_Home"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toStartOf="@+id/text_Home"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-    <ImageView
+    <Button
         android:id="@+id/btn_pickForMe"
-        android:layout_width="155dp"
-        android:layout_height="92dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/shuffle"
-        android:fontFamily="sans-serif"
+        style="@style/Widget.Material3.Button"
+        android:layout_width="149dp"
+        android:layout_height="59dp"
+        android:backgroundTint="#8F79BF"
+        android:fontFamily="@font/alata"
         android:text="Shuffle"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btn_start"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/btn_start"
         app:layout_constraintTop_toBottomOf="@+id/btn_start"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.072" />
+
+    <Button
+        android:id="@+id/btn_start"
+        style="@style/Widget.Material3.Button"
+        android:layout_width="149dp"
+        android:layout_height="59dp"
+        android:layout_marginTop="28dp"
+        android:backgroundTint="#8F79BF"
+        android:fontFamily="@font/alata"
+        android:text="Begin"
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="@+id/text_Home"
+        app:layout_constraintHorizontal_bias="0.462"
+        app:layout_constraintStart_toStartOf="@+id/text_Home"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="225dp"
+        android:layout_height="251dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/filmreel"
+        app:layout_constraintEnd_toEndOf="@+id/text_Home"
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintStart_toStartOf="@+id/text_Home"
+        app:layout_constraintTop_toBottomOf="@+id/text_Home" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
