--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -139,7 +139,7 @@
         app:layout_constraintTop_toBottomOf="@+id/text_profile"
         app:layout_constraintVertical_bias="0.627"
         tools:ignore="MissingConstraints"
-        tools:text="Username" />
+        tools:text="Lade" />
 
     <TextView
         android:id="@+id/FullName"
@@ -157,7 +157,7 @@
         app:layout_constraintTop_toBottomOf="@+id/text_profile"
         app:layout_constraintVertical_bias="0.565"
         tools:ignore="MissingConstraints"
-        tools:text="Full Name" />
+        tools:text="Ololade Odunsi" />
 
     <TextView
         android:id="@+id/textView11"
@@ -174,6 +174,6 @@
         app:layout_constraintTop_toBottomOf="@+id/text_profile"
         app:layout_constraintVertical_bias="0.797"
         tools:ignore="MissingConstraints"
-        tools:text="Phone Number" />
+        tools:text="+12033331000" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
